--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,7 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.10.0'
+    implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
     implementation 'androidx.activity:activity-compose:1.7.1'
     implementation "androidx.compose.ui:ui:$compose_ui_version"
@@ -63,4 +63,7 @@ dependencies {
 
     //to change the status-bar color
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.27.0"
+
+    //constraint layout
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
 }
