--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,19 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.devtools.ksp'
 }
+//
+//kotlin {
+//    sourceSets{
+//        debug{
+//            kotlin.srcDir("build/generated/ksp/debug/kotlin")
+//        }
+//        release{
+//            kotlin.srcDir("build/generated/ksp/release/kotlin")
+//        }
+//    }
+//}
 
 android {
     namespace 'com.example.filemanager'
@@ -27,11 +39,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
     buildFeatures {
         compose true
@@ -66,4 +78,9 @@ dependencies {
 
     //constraint layout
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
+
+    //compose destinations
+    implementation "io.github.raamcosta.compose-destinations:core:1.8.41-beta"
+    ksp "io.github.raamcosta.compose-destinations:core:1.8.41-beta"
+    ksp 'androidx.room:room-compiler:2.5.1'
 }
