--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,19 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id 'com.google.devtools.ksp'
 }
-//
-//kotlin {
-//    sourceSets{
-//        debug{
-//            kotlin.srcDir("build/generated/ksp/debug/kotlin")
-//        }
-//        release{
-//            kotlin.srcDir("build/generated/ksp/release/kotlin")
-//        }
-//    }
-//}
 
 android {
     namespace 'com.example.filemanager'
@@ -79,8 +67,6 @@ dependencies {
     //constraint layout
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
 
-    //compose destinations
-    implementation "io.github.raamcosta.compose-destinations:core:1.8.41-beta"
-    ksp "io.github.raamcosta.compose-destinations:core:1.8.41-beta"
-    ksp 'androidx.room:room-compiler:2.5.1'
+    //navigation
+    implementation "androidx.navigation:navigation-compose:2.5.3"
 }
